# vol_machain.

./: ALU.cpp  ALU.h  BUS.cpp  BUS.h  CMakeLists.txt  CU.cpp  CU.h  CUP.cpp  CUP.h  MainMachine.cpp  MainMachine.h  Memory.cpp  Memory.h  PC.cpp  PC.h  Rigister.cpp  Rigister.h  interFace.cpp  interFace.h  main.cpp  mainMachine.cpp  mainMachine.h  redme.txt  vol_machain.cpp  vol_machine_header.h
